--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     --bg: #F3F6F6;           /* page background */
 
     /* Plus look */
-    --plus-off: #DEDEDE;     /* idle stroke */
+    --plus-off: #77797C;     /* idle stroke */
     --plus-on:  #7D97EB;     /* hover stroke */
     --stroke: 1.5px;         /* thinner than before */
     --cell: 18px;            /* smaller symbol box */
