--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   :root{
     /* Layout */
     --margin: 20px;           /* equal margin all around */
-    --bg: #F3F6F6;
+    --bg: #FFFFFF;
 
     /* Plus look */
     --plus-off: #77797C;      /* idle */
