--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     --bg: #FFFFFF;
 
     /* Plus look */
-    --plus-off: #77797C;      /* idle */
+    --plus-off: #DEDEDE;      /* idle */
     --plus-on:  #7D97EB;      /* hover */
     --stroke: 2px;            /* ≈ 1.5 pt */
     --cell: 24px;             /* symbol box size (smaller) */
