--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
     /* Plus look */
     --plus-off: #DEDEDE;      /* idle */
-    --plus-on:  #7D97EB;      /* hover */
-    --stroke: 1px;            /* ≈ 1.5 pt */
+    --plus-on:  #7D6CB1;      /* hover */
+    --stroke: 2px;            /* ≈ 1.5 pt */
     --cell: 26px;             /* symbol box size (smaller) */
     --gap: 10px;              /* more spacing */
     --arm: 4px;               /* half-length of + arms */
