--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   :root{
     /* Layout */
     --margin: 20px;
-    --bg: #F3F6F6;
+    --bg: #FFFFFF;
 
     /* Colors and sizing */
     --plus-off: #77797C;   /* idle stroke */
