--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     --bg: #FFFFFF;
 
     /* Colors and sizing */
-    --plus-off: #77797C;   /* idle stroke */
+    --plus-off: #DEDEDE;   /* idle stroke */
     --plus-on:  #F3F6F6;   /* stroke on hover */
     --halo:     #060723;   /* circle behind on hover */
 
