--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 
     /* Colors and sizing */
     --plus-off: #DEDEDE;   /* idle stroke */
-    --plus-on:  #F3F6F6;   /* stroke on hover */
-    --halo:     #060723;   /* circle behind on hover */
+    --plus-on:  #060723;   /* stroke on hover */
+    --halo:     #7D97EB;   /* circle behind on hover */
 
-    --stroke: 2px;         /* ~1.5pt */
+    --stroke: 1.5px;         /* ~1.5pt */
     --cell: 26px;
     --gap: 16px;
-    --arm: 4px;            /* half-length of + arms */
+    --arm: 3px;            /* half-length of + arms */
     --halo-r: 8px;         /* circle radius in SVG units */
   }
 
